Added the ability to create new profiles, automatically puts them in database and list updates accordingly. TODO: make profiles clickable.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PageWise">
         <activity
+            android:name=".profile.ProfileViewActivity"
+            android:exported="false" />
+        <activity
             android:name=".FinishReadingActivity"
             android:exported="false" />
         <activity
