--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,13 +57,10 @@ dependencies {
     implementation 'androidx.test:monitor:1.5.0'
 
     testImplementation 'junit:junit:4.13.2'
-
     testImplementation 'androidx.test:core-ktx:1.4.0'
-    testImplementation 'androidx.test.ext:junit-ktx:1.1.3'
-    testImplementation 'org.robolectric:robolectric:4.4'
-    testImplementation 'androidx.test.ext:truth:1.4.0'
     testImplementation 'com.google.truth:truth:1.1.2'
-    testImplementation 'org.mockito:mockito-core:3.3.3'
+
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'com.google.truth:truth:1.1.2'
 }
